--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cli-progress": "^3.9.0"
+    "axios": "^0.21.1",
+    "cli-progress": "^3.9.0",
+    "dotenv": "^10.0.0"
   }
 }
