--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,12 @@
  "version": "0.0.1",
  "description": "Awesome project developed with TypeORM.",
  "devDependencies": {
-  "@types/node": "^8.0.29",
+  "@types/node": "^16.0.0",
   "ts-node": "^10.0.0",
   "typescript": "^4.3.4"
  },
  "dependencies": {
+  "axios": "^0.21.1",
   "fastify": "^3.18.0",
   "mysql": "^2.14.1",
   "pino-pretty": "^5.0.2",
@@ -18,6 +19,7 @@
  "scripts": {
   "start": "ts-node src/index.ts | pino-pretty -c -t",
   "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts | pino-pretty",
-  "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+  "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+  "syncbot": "ts-node src/sync/index.ts"
  }
 }
