--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
   "typescript": "^4.3.4"
  },
  "dependencies": {
+  "@types/cli-progress": "^3.9.2",
   "axios": "^0.21.1",
+  "cli-progress": "^3.9.0",
   "crypto": "^1.0.1",
   "date-fns": "^2.22.1",
   "fastify": "^3.18.0",
