--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "crypto": "^1.0.1",
   "date-fns": "^2.22.1",
   "fastify": "^3.18.0",
+  "fuse.js": "^6.4.6",
   "mysql": "^2.14.1",
   "pino-pretty": "^5.0.2",
   "reflect-metadata": "^0.1.10",
@@ -25,6 +26,7 @@
   "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts | pino-pretty",
   "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
   "syncbot": "ts-node src/sync/index.ts",
-  "initialize": "ts-node src/init.ts"
+  "initialize": "ts-node src/init.ts",
+  "start:search": "ts-node ./src/search/index.ts --transplie-only"
  }
 }
